:tokyo_tower: .imgzoom-hover overflow issue fixed (if parent element haven't overflow hidden)

--- a/style.css
+++ b/style.css
@@ -880,6 +880,7 @@ body a, body a:active, body  a:focus, body  a:hover {
 }
 .ftr__links a:hover, .ftr-links a:hover { border-left: 1px solid #777 !important; padding-left: 8px;}
 
+.imgzoom-hover [class*="__inr"] [class*="__img"] { overflow: hidden;}
 .imgzoom-hover [class*="__inr"]:hover [class*="__img"] img { transform: scale(1); }
 .imgzoom-hover [class*="__inr"] [class*="__img"] img { transform: scale(1.2); }
 
